# ExampleMaddGame

./: .gitignore  .gitmodules  CMakeLists.txt
include/: CMakeLists.txt  blockcomponent.h  blocksystem.h  cube.h  game.h  gamecamera.h  main.h  plane.h  simplex.h  simplexcomponent.h  simplexsystem.h  systems.h  worldcomponent.h  worldsystem.h
shaders/: default.fs  default.vs  instanceblock.fs  instanceblock.vs
src/: CMakeLists.txt  blockcomponent.cpp  blocksystem.cpp  cube.cpp  game.cpp  gamecamera.cpp  main.cpp  plane.cpp  simplex.cpp  simplexcomponent.cpp  simplexsystem.cpp  worldcomponent.cpp  worldsystem.cpp
